--- a/DiffTerm/diffTerm-excludedLats-bad.tex
+++ b/DiffTerm/diffTerm-excludedLats-bad.tex
@@ -1018,8 +1018,9 @@ follows that $U$ must have a tail, for otherwise, it would
 be a type 2 minimal set with only body and the pseudo 
 Maltsev operation would mean $\Con \alg A |_{U}$ is
 modular, a contradiction. 
+\\[8pt]
+{\bf TODO:} finish proof of Theorem~\ref{thm:conjecture}
 
-\todo{finish proof of Theorem~\ref{thm:conjecture}}
 
 \end{proof}
 
