committings some mods before removing refs.bib from repo

--- a/DiffTerm/inputs/refs.bib
+++ b/DiffTerm/inputs/refs.bib
@@ -64,7 +64,7 @@ MRREVIEWER = {M. G. Stone},
        URL = {http://dx.doi.org/10.1142/S0218196798000247},
 }
 @article{KSW,
-title = {Simpler maltsev conditions for (weak) difference terms in locally finite varieties},
+title = {Simpler {M}altsev conditions for (weak) difference terms in locally finite varieties},
 author = {Kearnes, Keith and Szendrei, \'{A}gnes and Willard, Ross},
 note = {to appear}
 }
@@ -147,7 +147,7 @@ MRREVIEWER = {Konrad P. Pi{\'o}ro},
   MRNUMBER = {0434928 (55 \#7891)},
 MRREVIEWER = {James B. Nation},
 }
-  @BOOK{HM:1988,
+@BOOK{HM:1988,
     AUTHOR = {Hobby, David and McKenzie, Ralph},
     TITLE = {The structure of finite algebras},
     SERIES = {Contemporary Mathematics},
@@ -180,7 +180,7 @@ MRREVIEWER = {Forbes D. Lewis},
        URL = {http://dx.doi.org/10.1016/0304-3975(76)90068-2},
 }
 
-  @article {Freese:2009,
+@article{Freese:2009,
     AUTHOR = {Freese, Ralph and Valeriote, Matthew A.},
     TITLE = {On the complexity of some {M}altsev conditions},
     JOURNAL = {Internat. J. Algebra Comput.},
@@ -196,6 +196,25 @@ MRREVIEWER = {Forbes D. Lewis},
     DOI = {10.1142/S0218196709004956},
     URL = {http://dx.doi.org/10.1142/S0218196709004956}
   }
+
+@ARTICLE{KearnesKiss1999,
+    AUTHOR = {Kearnes, Keith A. and Kiss, Emil W.},
+     TITLE = {Modularity prevents tails},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {127},
+      YEAR = {1999},
+    NUMBER = {1},
+     PAGES = {11--19},
+      ISSN = {0002-9939},
+     CODEN = {PAMYAR},
+   MRCLASS = {08A05 (08A30 08B10)},
+  MRNUMBER = {99m:08003},
+MRREVIEWER = {Branimir {\v{S}}e{\v{s}}elja},
+}
+
+
+
 @article {MR3076179,
     AUTHOR = {Kearnes, Keith A. and Kiss, Emil W.},
      TITLE = {The shape of congruence lattices},
