--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -15,6 +15,19 @@
 %% then delete the existing refs.bib file so it will be automatically generated 
 %% again with your new entry the next time you run pdfaltex.
 \begin{filecontents*}{inputs/refs.bib}
+@ARTICLE{2017arXiv170302764D,
+   author = {{DeMeo}, W.},
+    title = "{The Commutator as Least Fixed Point of a Closure Operator}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1703.02764},
+ primaryClass = "math.LO",
+ keywords = {Mathematics - Logic, Mathematics - Rings and Algebras},
+     year = 2017,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170302764D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @article {MR1871085,
     AUTHOR = {Bergman, Clifford and Slutzki, Giora},
      TITLE = {Computational complexity of some problems involving
@@ -370,7 +383,8 @@ MRREVIEWER = {Ivan Chajda},
 }
 \end{filecontents*}
 %:biblio
-\documentclass[12pt]{amsart}
+%\documentclass[12pt]{amsart}
+\documentclass[12pt,draft]{amsart}
 
 
 %% wjd added these packages vvvvvvvvvvvvvvvvvvvvvvvvv
@@ -410,21 +424,21 @@ MRREVIEWER = {Ivan Chajda},
 
 \title[A test for a difference term]{A polynomial time test for a
 difference term in an idempotent variety}
-\author{William DeMeo}
+\author[DeMeo]{William DeMeo}
 \address[William DeMeo]{
 Department of Mathematics\\
 University of Hawaii\\
 Honolulu, Hawaii\\
 96822 USA}
 \email[William DeMeo]{demeo@math.hawaii.edu}
-\author{Ralph Freese}
+\author[Freese]{Ralph Freese}
 \address[Ralph Freese]{
 Department of Mathematics\\
 University of Hawaii\\
 Honolulu, Hawaii\\
 96822 USA}
 \email[Ralph Freese]{ralph@math.hawaii.edu}
-\author{Matthew Valeriote}
+\author[Valeriote]{Matthew Valeriote}
 \address[Matthew Valeriote]{
 Department of Mathematics\\
 McMaster University\\
@@ -1395,7 +1409,7 @@ runs in time a constant times $rn^4m^2$.
 
 
 Of course the input to our algorithm is a finite, idempotent algebra $\alg A$
-and it return YES if $\alg A$ has a difference term; NO otherwise. Here is a 
+and it returns YES if $\alg A$ has a difference term; NO otherwise. Here is a 
 broad outline:
 
 \begin{enumerate}
@@ -1431,6 +1445,541 @@ Return YES.
 
 
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% wjd: NEW SECTION  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Difference Term Operation for One Algebra}
+Above we addressed the problem of deciding the existence 
+of a difference term for a given (idempotent, locally finite) 
+variety.  In this section we are concerned with the existence of a 
+difference term operation for a specific (finite, idempotent) algebra, 
+and we will describe polynomial-time algorithms for
+\begin{enumerate}
+\item \label{item:a} deciding whether a finite, idempotent algebra 
+has a difference term operation, and 
+\item \label{item:b} finding a difference term operation 
+for a finite, idempotent algebra.
+\end{enumerate}
+Notice that Theorem XX already solves Problem~(\ref{item:a}).
+Nonetheless, the solution presented in this section serves
+two puposes.  First, it gives an alternative proof of 
+the existence of a polynomial-time algorithm for solving Problem~(\ref{item:a})
+(and the proof doesn't use any tame congruence theory).  
+Second, this alternative proof develops machinery 
+that we need to solve Problem~(\ref{item:b}).
+
+
+
+
+
+
+\subsection{Local Difference Terms}
+\label{sec:local-diff-terms}
+In~\cite{MR3239624},
+Valeriote and Willard define %% an \defin{$\bA$-triple for $\bp$}
+%% to be a triple $(a,b,i)$ such that $a, b \in A$ and
+%% $p_i(a,b,b) = p_{i+1}(a,a,b)$. They use this to define
+a ``local Hagemann-Mitschke sequence'' which they use as the basis of
+an efficient algorithm for deciding for a given $n$ whether an idempotent
+variety is $n$-permutable.
+Inspired by that work, we devise a similar construct, called
+a ``local difference term,'' that we use to develop a polynomial-time
+algorithm for deciding the existence of a difference term operation.
+
+Let $\bA=\< A, \dots\>$ be an algebra, fix $a, b \in A$ and
+$i \in \{0,1\}$.
+%% An \defin{$\bA$-local difference term for
+A \defin{local difference term for $(a,b,i)$} 
+is a ternary term $d$ satisfying the following:
+\begin{align}
+%% \text{ if $i=0$, then } & a \comm{\Cg^{\bA}(a,b)}{\Cg^{\bA}(a,b)} d(a,b,b); \label{eq:diff-triple}\\
+\text{ if $i=0$, then } & a \comr{\Cg(a,b)} d(a,b,b); \label{eq:diff-triple}\\
+\text{ if $i=1$, then } &d(a,a,b) = b. \nonumber
+\end{align}
+If $d$ satisfies~(\ref{eq:diff-triple}) for all triples
+in some subset $S\subseteq A \times A \times \{0,1\}$, then we call $d$
+a \defin{local difference term for $S$}.
+
+\smallskip
+
+\noindent {\bf Notation:} In the sequel we will often use the abbreviation
+``\ld term'' in place of ``local difference term.''
+
+\smallskip
+
+Let
+$\sS = A \times A \times \{0,1\}$. We usually denote an 
+arbitrary element of $\sS$ by $\bs_i = (a_i, b_i, \chi_i)$.
+Suppose that every pair
+of elements of $\sS$ has an \ld term .
+That is, for each $(\bs_0, \bs_1)\in \sS^2$ there exists
+$d$ such that for each $i \in \{0,1\}$ we have
+\begin{align}
+  a_i \comr{\theta_i} d(a_i,b_i,b_i), & \;
+  \text{ if $\chi_i=0$, and }  \label{eq:d-trip-i1}\\
+  d(a_i,a_i,b_i) =b_i, & \;
+  \text{ if $\chi_i=1$,}\label{eq:d-trip-i2} %\\\nonumber
+\end{align}
+where $\bs_i = (a_i, b_i, \chi_i)$.
+Under these hypothesis we will prove that every subset $S\subseteq \sS$
+has an \ld term.
+That is, there is a single term $d$ that works (i.e., satisfies
+(\ref{eq:d-trip-i1}) and (\ref{eq:d-trip-i2})) for all $\bs \in S$.
+The statement and proof of this new result follows.
+
+%% \subsection{Main Results}
+\begin{theorem} %[\protect{cf.~\cite[Theorem 2.2]{MR3239624}}]
+  \label{thm:local-diff-terms}
+  Let $\sV$ be an idempotent variety and
+  $\bA \in \sV$. Define
+  $\sS= A \times A \times \{0,1\}$
+  and suppose that every pair
+  $(\bs_0, \bs_1) \in \sS^2$
+  has a local difference term.
+  Then every subset $S \subseteq \sS$
+  has a local difference term.
+\end{theorem}
+
+\noindent {\bf Notation:} \emph{Throughtout the proof of Theorem~\ref{thm:local-diff-terms}, we let}
+\begin{equation*}
+\theta_i := \Cg(a_i,b_i).
+\end{equation*}
+
+\begin{proof}
+
+The proof is by induction on the size of $S$.  In the base case, $|S| = 2$,
+the claim holds by assumption.
+Fix $n\geq 2$ and assume that every subset of $\sS$ of size $2\leq k \leq n$ has 
+an \ld term. Let
+\[
+S = \{(a_0, b_0, \chi_0), (a_1, b_1, \chi_1), \dots, (a_{n}, b_{n},\chi_{n})\} 
+\subseteq \sS,
+\]
+so that $|S| = n+1$.  We prove $S$ has an \ld term.
+
+Since $|S| \geq 3$ and $\chi_i \in \{0,1\}$ for all $i$, there must exist
+indices $i\neq j$ such that $\chi_i = \chi_j$. Assume without loss of generality
+that one of these indices is $j=0$.  Define
+the set
+$S' = S \setminus \{(a_0, b_0, \chi_0)\}$.
+Since $|S'| < |S|$, the set $S'$ has an \ld term $p$.
+We split the remainder of the proof into two cases.
+%% In the first case $\chi_0 = 0$ and in the second $\chi_0 = 1$.
+
+\medskip
+
+%--------------------------------------
+\noindent \underline{Case $\chi_0 = 0$}:
+Without loss of generality, suppose that $\chi_1 = %% \chi_2 =
+\cdots =\chi_k = 1$,
+and $\chi_{k+1} %% = \chi_{k+2}
+= \cdots = \chi_{n} = 0$. Define %% $T$ to be the set
+\[T = \{(a_0, p(a_0, b_0, b_0), 0),
+(a_1, b_1, 1), (a_2, b_2, 1),
+\dots, (a_k, b_k, 1)\},\] and
+note that $|T| < |S|$.
+Let $t$ be an \ld term for $T$.
+Define
+\[
+d(x,y,z) = t(x, p(x,y,y), p(x,y,z)).
+\]
+We show that $d$ is an \ld term for $S$.
+
+Since $\chi_0 =0$, we first verify that
+$(a_0, d(a_0,b_0,b_0))$ belongs to $\com{\theta_0}$.
+Let $\gamma = \Cg(a_0, p(a_0,b_0,b_0))$. 
+Then
+\begin{equation}
+    \label{eq:100000}
+  d(a_0,b_0,b_0) =
+  %% t(a_0, p(a_0,b_0,b_0), p(a_0,b_0,b_0))\comr{\tau} a_0,
+  t(a_0, p(a_0,b_0,b_0), p(a_0,b_0,b_0))\comr{\gamma} a_0.
+\end{equation}
+%% where we have used $\tau$ to denote $\Cg(a_0, p(a_0,b_0,b_0))$.
+The pair $(a_0, p(a_0,b_0,b_0))$ is equal to
+$(p(a_0,a_0,a_0), p(a_0,b_0,b_0))$ and
+belongs to $\theta_0$, so $\gamma\leq \theta_0$,
+so,
+%% so $\tau\leq \theta_0$. Therefore,
+by monotonicity of the commutator, we have
+$\com{\gamma} \leq \com{\theta_0}$.
+It follows from this and (\ref{eq:100000}) that
+%% $d(a_0,b_0,b_0)\comm{\Cg(a_0,b_0)}{\Cg(a_0,b_0)} a_0$,
+$d(a_0,b_0,b_0)\comr{\theta_0} a_0$, as desired.
+
+For the indices $1\leq i \leq k$ we have $\chi_i =1$, so we prove
+$d(a_i,a_i,b_i) = b_i$ for such indices. Observe,
+\[
+  d(a_i,a_i,b_i) =
+  t(a_i, p(a_i,a_i,a_i), p(a_i,a_i,b_i)) % \label{eq:200000}\\
+  =t(a_i, a_i, b_i) % \label{eq:200001}\\
+  =b_i. % \label{eq:200002}
+\]
+The first equation holds by definition of $d$, the second
+because $p$ is an idempotent local difference term for
+$S'$, and the third because $t$ is an \ld term for $T$.
+
+The remaining triples in our original set $S$
+have indices satisfying $k<j\leq n$ and $\chi_j = 0$.
+Thus, for these triples we want
+$d(a_j,b_j,b_j)\comr{\theta_j} a_j$.
+By definition,
+\begin{equation}
+  \label{eq:450000}
+d(a_j,b_j,b_j) =t(a_j, p(a_j,b_j,b_j), p(a_j,b_j,b_j)).
+\end{equation}
+Since $p$ is an \ld term for $S'$, %we have
+the pair $(p(a_j,b_j,b_j), a_j)$ belongs to $\com{\theta_j}$.
+%% $(p(a_j,b_j,b_j), a_j)\in [\Cg(a_j,b_j), \Cg(a_j,b_j)]$.
+This and
+(\ref{eq:450000}) imply
+that
+$(d(a_j, b_j,b_j), t(a_j,a_j,a_j))$
+belongs to
+$\com{\theta_j}$.
+Finally, by idempotence of $t$ we have
+$d(a_j,b_j,b_j)\comr{\theta_j} a_j$,
+as desired.
+\\[4pt]
+%--------------------------------------
+\underline{Case $\chi_0 = 1$}:
+%% \\[4pt]
+%% Assume $\chi_0 = 1$ and,
+Without loss of generality, suppose $\chi_1 = \chi_2 =\cdots =\chi_k = 0$,
+and $\chi_{k+1} = \chi_{k+2} = \cdots = \chi_{n} = 1$. Define
+\[
+T = \{(p(a_0, a_0, b_0), b_0, 1),
+(a_1, b_1, 0), (a_2, b_2 0), \dots, (a_k, b_k, 0)\},
+\]
+and note that $|T| < |S|$.
+Let $t$ be an \ld term for $T$ and
+define
+%% \[d(x,y,z) = t(p(x,y,z), p(y,y,z), z).\]
+$d(x,y,z) = t(p(x,y,z), p(y,y,z), z)$.
+Since $\chi_0 =1$, we want $d(a_0,a_0,b_0) = b_0$. By the definition of
+$d$,
+\begin{equation*}
+  d(a_0,a_0,b_0) =
+  t(p(a_0,a_0,b_0), p(a_0,a_0,b_0), b_0) =b_0.
+\end{equation*}
+% $d(a_0,a_0,b_0) =
+% t(p(a_0,a_0,b_0), p(a_0,a_0,b_0), b_0) =b_0$.
+The last equality holds since $t$ is an \ld term for $T$, thus,
+for $(p(a_0, a_0, b_0), b_0, 1)$.
+
+If $1\leq i \leq k$, then $\chi_i =0$, so for these indices we prove
+that $(a_i, d(a_i,b_i,b_i))$ belongs to $\com{\theta_i}$.
+Again, starting from the definition of $d$ and using idempotence of $p$, we have
+\begin{equation}
+  \label{eq:40000}
+  d(a_i,b_i,b_i) =
+  t(p(a_i,b_i,b_i), p(b_i,b_i,b_i), b_i)=
+  t(p(a_i,b_i,b_i), b_i, b_i).
+\end{equation}
+% \begin{align}
+%   d(a_i,b_i,b_i) &=
+%   t(p(a_i,b_i,b_i), p(b_i,b_i,b_i), b_i)   \label{eq:40000}\\
+%   &=t(p(a_i,b_i,b_i), b_i, b_i). \nonumber
+% \end{align}
+Next, since $p$ is an \ld term for $S'$, we have
+\begin{equation}
+  \label{eq:50000}
+  t(p(a_i,b_i,b_i), b_i, b_i)
+ \comr{\theta_i}
+ t(a_i, b_i, b_i).
+\end{equation}
+Since $t$ is an \ld term for $T$, hence for
+$(a_i, b_i, b_i)$,  %% $(1\leq i \leq k)$,
+we see that
+$t(a_i, b_i, b_i) \comr{\theta_i} a_i$.
+This plus (\ref{eq:40000}) and (\ref{eq:50000}) yields
+$d(a_i,b_i,b_i) \comr{\theta_i} a_i$,
+as desired.
+
+The remaining elements of our original set $S$
+have indices $j$ satisfying $k<j\leq n$ and $\chi_j = 1$.
+For these we want $d(a_j,a_j,b_j) = b_j$.
+Since $p$ is an \ld term for $S'$, we have
+$p(a_j,a_j,b_j) = b_j$, and this along with idempotence of $t$ yields
+\[ d(a_j,a_j,b_j) =  t(p(a_j,a_j,b_j), p(a_j,a_j,b_j), b_j)=  t(b_j, b_j, b_j) =b_j,\]
+% \begin{align*}
+% d(a_j,a_j,b_j) &=
+% t(p(a_j,a_j,b_j), p(a_j,a_j,b_j), b_j)\\
+% &=t(b_j, b_j, b_j) =b_j,
+% \end{align*}
+as desired.
+\end{proof}
+
+\begin{corollary}
+  \label{cor:loc-diff-term}
+  A finite idempotent algebra $\bA$ has a difference term operation if and
+  only if each pair $((a,b,i), (a',b',i')) \in (A\times A \times \{0,1\})^2$ has a local
+  difference term.
+\end{corollary}
+\begin{proof}
+  One direction is clear, since a difference term operation for $\bA$ is
+  obviously an \ld term for the whole set
+  $A\times A \times \{0,1\}$.
+  For the converse, suppose
+  each pair in $(A\times A \times \{0,1\})^2$ has an \ld term. 
+  Then, by Theorem~\ref{thm:local-diff-terms},
+  there is a single \ld term for the whole set $A\times A \times \{0,1\}$,
+  and this is an \ld term operation for $\bA$.  Indeed, if $d$ is a
+  \ld term for $A\times A \times \{0,1\}$, then
+  for all $a, b \in A$, we have
+  $a \comr{\Cg(a,b)} d(a,b,b)$,
+  since $d$ is an \ld term for $(a,b,0)$, and we have
+  $d(a,a,b) = b$, since $d$ is also an \ld term for
+  $(a,b,1)$.
+\end{proof}
+
+% \draftsecskip
+
+\subsection{Algorithm 1: existence of a difference term operation}
+\label{sec:algor-1}
+%% In this subsection we prove the following:
+%% \subsection*{Algorithm 1: existence of a difference term operation}
+\begin{corollary}
+  \label{cor:algor-1}
+  There is a polynomial-time algorithm that takes as input
+  any finite idempotent algebra $\bA$ and decides whether
+  %% the variety $\bbV(\bA)$ that it generates
+  $\bA$ has a difference term operation.
+\end{corollary}
+\begin{proof}
+  %% and let  $\sV = \bbV(\bA)$.
+  We describe an efficient algorithm for deciding,
+  given a finite idempotent algebra $\bA$,
+  whether every pair $((a,b,i), (a',b',i')) \in (A\times A \times \{0,1\})^2$ 
+  has an \ld term.  By Corollary~\ref{cor:loc-diff-term}, this will prove we
+  can decide in polynomial-time whether $\bA$ has an difference term operation.
+  %% We will then complete the
+  %% proof by explaining why $\bA$ has a difference term operation iff the variety
+  %% it generates has a difference term.
+
+  Fix a pair
+  $((a,b,i), (a',b',i'))$ in $(A\times A \times \{0,1\})^2$. If $i = i' = 0$,
+  then the first projection is an \ld term. If $i = i' = 1$,
+    then the third projection is an \ld term. The two remaining cases to
+    consider are (1) $i = 0$ and $i'=1$, and (2)
+    $i = 1$ and $i'=0$. Since these are symmetric, we only handle the
+    first case. Assume  the given pair of triples is
+    $((a,b,0), (a',b',1))$.  By definition, a term $t$ is 
+    an \ld term for this pair iff
+    \[
+    a\comr{\Cg(a,b)} t^{\bA}(a,b,b) \; \text{ and } \;
+    t^{\bA}(a',a',b') = b'.
+    \]
+    We can rewrite this condition more compactly by
+    considering
+    \[t^{\bA\times \bA}((a,a'), (b,a'), (b,b')) =
+    (t^{\bA}(a,b,b),t^{\bA}(a',a',b')).\]
+    Clearly $t$ is an \ld term for
+    $((a,b,0), (a',b',1))$ iff
+    \[
+    t^{\bA\times \bA}((a,a'), (b,a'), (b,b'))\in a/\delta \times \{b'\},
+    \]
+    where $\delta = \com{\Cg(a,b)}$ and $a/\delta$ denotes the
+    $\delta$-class containing $a$.
+    (Observe that $a/\delta \times \{b'\}$ is a subalgebra of $\bA \times \bA$
+    by idempotence.)
+    It follows that the pair
+    $((a,b,0), (a',b',1))$ has an \ld term iff
+    the subuniverse of $\bA\times \bA$ generated by
+    $\{(a,a'), (b,a'), (b,b')\}$ intersects nontrivially with the subuniverse
+    $a/\delta \times \{b'\}$.
+
+    Thus, the algorithm takes as input $\bA$ and, for each
+    $((a,a'), (b,a'), (b,b'))$ in $(A\times A)^3$, computes
+    $\delta = \com{\Cg(a,b)}$, computes the subalgebra
+    $\bS$ of $\bA\times \bA$ generated by
+    %% \Sg^{\bA\times \bA}\{(a,a'), (b,a'), (b,b')\}$, and then
+    $\{(a,a'), (b,a'), (b,b')\}$, and then
+    tests whether $S \cap (a/\delta \times \{b'\})$ is empty.
+    If we find an empty intersection at any point, then
+    $\bA$ has no difference term operation.
+    Otherwise the algorithm halts without witnessing an empty
+    intersection, in which case $\bA$ has a difference term operation.
+
+    Most of the operations carried out by this algorithm are well known to be
+    polynomial-time.  For example, the fact that the running time of 
+    subalgebra generation is polynomial has been known for a long time (see~\cite{MR0455543}).
+    The time complexity of congruence generation is also known to be polynomial
+    (see~\cite{MR2470585}).  The only operation whose tractability might be
+    called into question is the commutator, but there is a straight-forward
+    algorithm for computing it (see~\cite{2017arXiv170302764D}).
+    % which, after the congruences have been computed, simply
+    % involves generating more subalgebras.
+    %% Finally, we observe that if $\bA$ has a difference term operation, then the
+    %% variety it generates has a difference term.
+\end{proof}
+
+
+More details on the complexity of operations carried out by the algorithm, as well as many other algebraic operations, can be found in the references mentioned, as well as~\cite{MR1871085,MR1695293,Freese:2009}.
+
+\section{Computing difference term operations}
+Let $\alg{A} = \<A, \dots\>$ be a finite idempotent algebra and suppose we know that
+a difference term operation for $\alg{A}$ exists.  In this section we
+describe an algorithm for constructing a difference term operation given
+that we know such an operation exists.
+Throughout this section, for elements $a_i$ and $b_i$ of an algebra $\alg{A}$, 
+we denote by $\theta_i$ the congruence generated by $(a_i,b_i)$.  That is,
+\begin{equation*}
+\theta_i := \Cg^{\alg{A}}(a_i, b_i).
+\end{equation*}
+
+\subsection{Sets of size two}
+An \ld term operation for 
+$\{(a_0,b_0,0), (a_1, b_1, 0)\}$ is the first projection,
+$t(x,y,z) = x$.
+An \ld term operation for the set
+$\{(a_0,b_0,1), (a_1, b_1, 1)\}$ is the third projection,
+$t(x,y,z) = y$.
+
+
+\smallskip
+\noindent \underline{\textbf{Subroutine 01}}\\[4pt]
+To compute an \ld term operation for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$,
+\begin{enumerate}
+\item compute $\delta_0=\com{\theta_0}$;
+\item form $C_0= a_0/\delta_0 \times \{b_1\} \leq \alg{A}\times\alg{A}$;
+\item compute
+      $S_0=\Sg^{\alg{A}\times \alg{A}} \{(a_0,a_1),(b_0,a_1),(b_0,b_1)\}$;
+\item find a term operation $t$ of $\alg{A}$ satisfying
+\[t^{\alg{A}\times\alg{A}}((a_0,a_1),(b_0,a_1),(b_0,b_1)) =
+ (t^{\alg{A}}(a_0,b_0,b_0), t^{\alg{A}}(a_1,a_1,b_1)) \in C_0 \cap S_0.\]
+\end{enumerate}
+Then $t$ is an \ld term operation for
+$\{(a_0, b_0, 0), (a_1, b_1, 1)\}$.
+
+\medskip
+
+\noindent \underline{\textbf{Subroutine 10}}\\[4pt]
+To compute an \ld term operation for
+$\{(a_0,b_0,1), (a_1, b_1, 0)\}$, obviously this is symmetric to
+the situation handled in Subroutine 01.  Nonetheless, we include the
+listing here so that later we can easy refer to this version of the algorithm.
+\begin{enumerate}
+\item Compute $\delta_1=\com{\theta_1}$;
+\item form $C_1= \{b_0\}\times a_1/\delta_1 \leq \alg{A}\times\alg{A}$;
+\item compute
+      $S_1=\Sg^{\alg{A}\times \alg{A}} \{(a_0,a_1),(a_0,b_1),(b_0,b_1)\}$;
+\item find a term operation $t$ of $\alg{A}$ satisfying
+%\[t((a_0,a_1),(a_0,b_1),(b_0,b_1)) \in C \cap S.\]
+\[t^{\alg{A}\times\alg{A}}((a_0,a_1),(a_0,b_1),(b_0,b_1)) =
+ (t^{\alg{A}}(a_0,a_0,b_0), t^{\alg{A}}(a_1,b_1,b_1)) \in C_1 \cap S_1.\]
+\end{enumerate}
+Then $t$ is an \ld term operation for
+$\{(a_0, b_0, 1), (a_1, b_1, 0)\}$.
+
+\smallskip
+
+\subsection{Sets of size three}
+An \ld term operation for the set
+\begin{equation*}
+\{(a_0,b_0, 0), (a_1, b_1, 0), (a_2, b_2, 0)\}
+\end{equation*}
+is the first projection, $t(x,y,z) = x$.
+An \ld term operation for the set
+\begin{equation*}
+\{(a_0,b_0,1), (a_1, b_1, 1), (a_2, b_2, 1)\}
+\end{equation*}
+is the third projection, $t(x,y,z) = y$.
+There are only two other sets of size three to consider, 
+since the other cases are symmetric to these.
+They are
+\begin{equation*}
+\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\} \text{ and }
+\{(a_0, b_0, 0), (a_1, b_1, 1), (a_2, b_2, 1)\}.
+\end{equation*}
+
+\smallskip
+
+\noindent \underline{\textbf{Subroutine 010}}\\[4pt]
+To find an \ld term operation for
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$,
+\begin{enumerate}
+\item using Subroutine 01, compute an \ld term operation $t$ for
+\begin{equation*}
+\{(a_0, b_0, 0), (a_1, b_1, 1)\}; 
+\end{equation*}
+\item Using Subroutine 10, compute an \ld term operation $s$ for
+\begin{equation*}
+\{(a_1, b_1, 1), (a_2, t(a_2,b_2,b_2), 0)\}.
+\end{equation*}
+\end{enumerate}
+\noindent {\bf Claim:} The term
+$d(x,y,z) = s(x, t(x,y,y), t(x,y,z))$
+is an \ld term operation for
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$.
+\begin{proof}
+First observe that
+$d(a_0, b_0, b_0)=s(a_0, t(a_0,b_0,b_0), t(a_0,b_0,b_0))$, and the latter is
+congruent to $s(a_0, a_0, a_0) = a_0$ modulo $\com{\theta_0}$.
+Next,
+\[
+d(a_1, a_1, b_1)
+=s(a_1, t(a_1,a_1, a_1), t(a_1,a_1,b_1))
+=s(a_1, a_1, b_1) = b_1.\]
+Finally, $d(a_2, b_2, b_2)=s(a_2, t(a_2,b_2,b_2), t(a_2,b_2,b_2))$
+and the latter is congruent to $a_2$ modulo
+$\comr{\Cg(a_2, t(a_2,b_2,b_2))}$.
+By idempotence, $\Cg(a_2, t(a_2,b_2,b_2)) =
+\Cg(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$, which is contained 
+in $\theta_2 = \Cg(a_2, b_2)$.
+% and the pair $(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$
+% clearly belongs to $\Cg(a_2,b_2)$.
+% Therefore, $\Cg(a_2, t(a_2,b_2,b_2)) \leq \Cg(a_2,b_2)$.
+By monotonicity of the commutator,
+$d(a_2, b_2, b_2)\comr{\theta_2} a_2$, as desired.
+\end{proof}
+\medskip
+
+\noindent \underline{\textbf{Subroutine 011}}\\[4pt]
+To find an \ld term operation for
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$,
+\begin{enumerate}
+\item using Subroutine 01, compute an \ld term $t$ for the set
+\begin{equation*}
+\{(a_0, b_0, 0), (a_1, b_1, 1)\};
+\end{equation*}
+\item using Subroutine 01, compute an \ld term $s$  for the set
+\begin{equation*}
+\{(a_0, b_0, 0),  (t(a_2,a_2,b_2), b_2, 1)\}.
+\end{equation*}
+\end{enumerate}
+\noindent {\bf Claim:} The term
+%%%
+$d(x,y,z) = s(t(x,y,z), t(y,y,z),z)$
+%%%
+is an \ld term  for
+$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$.
+
+\begin{proof}
+First observe that
+$d(a_0, b_0, b_0)=
+s(t(a_0,b_0,b_0), t(b_0,b_0,b_0), b_0)$,
+and the latter is congruent to $s(a_0, b_0, b_0) = a_0$ modulo
+$\com{\theta_0}$. Next,
+\[
+d(a_1, a_1, b_1)
+=s(a_1, t(a_1,a_1, a_1), t(a_1,a_1,b_1))
+=s(a_1, a_1, b_1) = b_1.\]
+Finally,
+$d(a_2, b_2, b_2)=s(a_2, t(a_2,b_2,b_2), t(a_2,b_2,b_2))$
+and the latter is congruent to $a_2$ modulo
+$\comr{\Cg(a_2, t(a_2,b_2,b_2))}$.
+By idempotence,
+$\Cg(a_2, t(a_2,b_2,b_2)) =
+\Cg(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$, which is below
+$\theta_2 = \Cg(a_2,b_2)$.  Therefore,
+% and the pair $(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$
+% clearly belongs to $\Cg(a_2,b_2)$.
+% Therefore, $\Cg(a_2, t(a_2,b_2,b_2)) \leq \Cg(a_2,b_2)$.
+$d(a_2, b_2, b_2)\comr{\theta_2} a_2$, as desired.
+\end{proof}
+
+...to be continued...
 
 %\bibliographystyle{amsplain} %% or amsalpha
 %% \bibliographystyle{alpha-url}
