removing \Cg from Ralph's macros
I don't think Ralph uses \Cg anywhere, but I do, so
I'm replacing his \Cg macro with mine (they have different behavior)

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -11,6 +11,7 @@
 \newcommand{\Comr}[1]{\ensuremath{\mathrel{[#1]}}} % [[r]] (relation spacing)
 \newcommand{\Com}[1]{\ensuremath{[#1]}}            % [[r]] (no extra space)
 \newcommand\mytimes{\ensuremath{\ast}}
+
 \newcommand{\Phiba}{\ensuremath{\Phi_{\beta, \alpha}}}
 \newcommand{\Psiba}{\ensuremath{\Psi_{\beta, \alpha}}}
 \newcommand{\Deltaba}{\ensuremath{\Delta_{\beta, \alpha}}}
@@ -52,7 +53,7 @@
 \newcommand{\body}{\ensuremath{\operatorname{Body}}}
 \newcommand{\tail}{\ensuremath{\operatorname{Tail}}}
 \newcommand{\Tol}{\ensuremath{\operatorname{Tol}}}
-%% \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
+\newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
 \newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\typ}{\ensuremath{\operatorname{typ}}}
@@ -62,6 +63,7 @@
 \newcommand{\sdp}{\ensuremath{\leq_{\mathrm{sd}}}}
 %\newcommand{\defn}[1]{{\bf #1}}
 \newcommand{\defn}[1]{\textit{#1}}
+\newcommand{\defin}[1]{\textit{#1}}
 \newcommand{\N}{\ensuremath{\mathbb{N}}}
 \newcommand{\SDwedge}{\ensuremath{\mbox{SD}_\wedge}}
 \newcommand{\<}{\ensuremath{\langle}}
@@ -219,6 +221,9 @@
 %% \acfi{CSP} -- Full Name acronym in italics and abbreviated form in upshape.\\
 %% \acsu{CSP} -- short form of the acronym and marks it as used.\\
 %% \aclu{CSP} -- Prints the long form of the acronym and marks it as used.\\
+
+\acrodef{ld}[LD]{local difference}
+\newcommand{\ld}{\acs{ld}\xspace}
 
 \acrodef{sat}[SAT]{satisfiability}
 \newcommand{\sat}{\acs{sat}\xspace}
