--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -433,7 +433,7 @@ MRREVIEWER = {Ivan Chajda},
 \usepackage{inputs/wjdlatexmacs}
 
 \usepackage[mathcal]{euscript}
-
+\usepackage{comment}
 
 \renewcommand{\th}[2]{#1\mathrel{\theta}#2}
 \newcommand{\infixrel}[3]{#2\mathrel{#1}#3}
@@ -1885,7 +1885,7 @@ such as $\theta_0 = \Cg^{\alg{A}}(a_0, b_0)$.
 
 \smallskip
 
-\noindent \underline{\textbf{Subroutine 01}}\\[4pt]
+\noindent \underline{\textbf{Subroutine \ld-2}}\\[4pt]
 To compute an \ld term operation for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$,
 \begin{enumerate}
 \item compute $\delta_0=\com{\theta_0}$;
@@ -1899,12 +1899,12 @@ To compute an \ld term operation for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$,
 Then $t$ is an \ld term operation for
 $\{(a_0, b_0, 0), (a_1, b_1, 1)\}$.
 
+\begin{comment}
 \medskip
-
-\noindent \underline{\textbf{Subroutine 10}}\\[4pt]
+\noindent \underline{\textbf{Subroutine \ld-2'}}\\[4pt]
 To compute an \ld term operation for
 $\{(a_0,b_0,1), (a_1, b_1, 0)\}$, obviously this is symmetric to
-the situation handled in Subroutine 01 and so the general algorithm
+the situation handled in Subroutine LD2 and so the general algorithm
 is the same.  Nonetheless, we include a listing of the computational 
 steps required so that later we can easily refer to this special case 
 of the general algorithm.
@@ -1920,8 +1920,12 @@ of the general algorithm.
 \end{enumerate}
 Then $t$ is an \ld term operation for
 $\{(a_0, b_0, 1), (a_1, b_1, 0)\}$.
+\end{comment}
 
-\smallskip
+
+\emph{TODO: the remaining sections about the algorithm will be completely
+rewritten and mostly deleted.  Obviously we don't want to build up the 
+algorithm in the way described.  Instead, we'll use recursion.}
 
 \subsection{Sets of size three}
 An \ld term operation for the set
@@ -1934,98 +1938,133 @@ An \ld term operation for the set
 \{(a_0,b_0,1), (a_1, b_1, 1), (a_2, b_2, 1)\}
 \end{equation*}
 is the third projection, $t(x,y,z) = y$.
-There are only two other sets of size three that need to be considered, 
-since the other cases are symmetric to these.
+There are two other forms of 3-sets to consider.
+We label these $P_3$ and $Q_3$ and handle them with 
+the following subroutines.
 % They are
-% \begin{equation*}
-% \{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\} \text{ and }
-% \{(a_0, b_0, 0), (a_1, b_1, 1), (a_2, b_2, 1)\}.
-% \end{equation*}
+% \begin{align*}
+% P &= \{(a_0, b_0, 0), (a_1, b_1, 0),  (a_2, b_2, 1)\} \text{ and }\\
+% Q &= \{(a_0, b_0, 1), (a_1, b_1, 1), (a_2, b_2, 0)\}.
+% \end{align*}
+% $P = \{(a_0, b_0, 0), (a_1, b_1, 0),  (a_2, b_2, 1)\}$
+% and $Q = \{(a_0, b_0, 1), (a_1, b_1, 1), (a_2, b_2, 0)\}$.
 
-\smallskip
-
-\noindent \underline{\textbf{Subroutine 010}}\\[4pt]
-To find an \ld term operation for
-$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$,
-\begin{enumerate}
-\item using Subroutine 01, compute an \ld term operation $t$ for
-\begin{equation*}
-\{(a_0, b_0, 0), (a_1, b_1, 1)\}; 
-\end{equation*}
-\item Using Subroutine 10, compute an \ld term operation $s$ for
-\begin{equation*}
-\{(a_1, b_1, 1), (a_2, t(a_2,b_2,b_2), 0)\}.
-\end{equation*}
-\end{enumerate}
-\noindent {\bf Claim:} The term
-$d(x,y,z) = s(x, t(x,y,y), t(x,y,z))$
-is an \ld term operation for
-$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$.
-\begin{proof}
-First observe that
-$d(a_0, b_0, b_0)=s(a_0, t(a_0,b_0,b_0), t(a_0,b_0,b_0))$, and the latter is
-congruent to $s(a_0, a_0, a_0) = a_0$ modulo $\com{\theta_0}$.
-Next,
-\[
-d(a_1, a_1, b_1)
-=s(a_1, t(a_1,a_1, a_1), t(a_1,a_1,b_1))
-=s(a_1, a_1, b_1) = b_1.\]
-Finally, $d(a_2, b_2, b_2)=s(a_2, t(a_2,b_2,b_2), t(a_2,b_2,b_2))$
-and the latter is congruent to $a_2$ modulo
-$\comr{\Cg(a_2, t(a_2,b_2,b_2))}$.
-By idempotence, $\Cg(a_2, t(a_2,b_2,b_2)) =
-\Cg(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$, which is contained 
-in $\theta_2 = \Cg(a_2, b_2)$.
-% and the pair $(t(a_2,a_2,a_2), t(a_2,b_2,b_2))$
-% clearly belongs to $\Cg(a_2,b_2)$.
-% Therefore, $\Cg(a_2, t(a_2,b_2,b_2)) \leq \Cg(a_2,b_2)$.
-By monotonicity of the commutator,
-$d(a_2, b_2, b_2)\comr{\theta_2} a_2$, as desired.
-\end{proof}
 \medskip
 
-\noindent \underline{\textbf{Subroutine 011}}\\[4pt]
+\noindent \underline{\textbf{Subroutine \ld-3.0}}\\[4pt]
 To find an \ld term operation for
-$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$,
+$P_3:=\{(a_0, b_0, 0), (a_1, b_1, 0),  (a_2, b_2, 1)\}$,
+% $\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$,
 \begin{enumerate}
-\item \label{item:001-1}
-using Subroutine 01, compute an \ld term $t$ for the set
+\item use Subroutine \ld-2 to compute an \ld term operation $s$ for
 \begin{equation*}
-\{(a_0, b_0, 0), (a_1, b_1, 1)\};
+\{(a_1, b_1, 0), (a_2, b_2, 1)\}; 
 \end{equation*}
-\item \label{item:001-2} using Subroutine 01, compute an \ld term $s$  for the set
+\item use Subroutine \ld-2 to compute an \ld term operation $t$ for
 \begin{equation*}
-\{(a_0, b_0, 0),  (t(a_2,a_2,b_2), b_2, 1)\}.
+\{(a_0, s(a_0, b_0, b_0), 0), (a_2, b_2, 1)\}.
 \end{equation*}
 \end{enumerate}
-\noindent {\bf Claim:} The term
-%%%
-$d(x,y,z) = s(t(x,y,z), t(y,y,z),z)$
-%%%
-is an \ld term  for
-$\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$.
+It is easy to check that
+$d(x,y,z) = t(x, s(x,y,y), s(x,y,z))$
+is then an \ld term operation for $P_3$ 
+(see Case $\chi_0=0$ in the proof of Theorem~\ref{thm:local-diff-terms}).
 
-\begin{proof}
-First observe that
-$d(a_0, b_0, b_0)=
-s(t(a_0,b_0,b_0), t(b_0,b_0,b_0), b_0)$ is congruent to 
-$s(a_0, b_0, b_0)$ modulo $\com{\theta_0}$, which is 
-congruent to $a_0$ modulo $\comr{\theta_0}$.
-Next,
-% and the latter is congruent to $s(a_0, b_0, b_0)$ modulo
-% $\com{\theta_0}$, which in turn is congruent to 
-% $a_0$ modulo $\com{\theta_0}$. Next,
-$d(a_1, a_1, b_1)
-=s(t(a_1, a_1, b_1),t(a_1,a_1, b_1), b_1)$, which is equal to 
-$s(b_1, b_1, b_1) = b_1$ because of the property satisfied 
-in Step (\ref{item:001-1}) of the subroutine.
-Finally,
-$d(a_2, a_2, b_2)=s(t(a_2, a_2, b_2), t(a_2,a_2,b_2), b_2)$,
-which is equal to $b_2$ because of the property satisfied in 
-Step (\ref{item:001-2}) of the subroutine.
-\end{proof}
+\medskip
 
-...to be continued...
+\noindent \underline{\textbf{Subroutine \ld-3.1}}\\[4pt]
+To find an \ld term operation for 
+$Q_3 := \{(a_0, b_0, 1), (a_1, b_1, 1), (a_2, b_2, 0)\}$,
+\begin{enumerate}
+\item \label{item:001-1}
+use Subroutine \ld-2 to compute an \ld term $s$ for the set
+\begin{equation*}
+\{(a_1, b_1, 1), (a_2, b_2, 0)\};
+\end{equation*}
+\item \label{item:001-2} use Subroutine \ld-2 to compute an \ld term $t$
+for the set
+\begin{equation*}
+\{(s(a_0, a_0, b_0), b_0, 1),  (a_2,a_2,0)\}.
+\end{equation*}
+\end{enumerate}
+Then 
+%%%
+$d(x,y,z) = t(s(x,y,z), s(y,y,z),z)$
+%%%
+is an \ld term  for $Q_3$ (see Case $\chi_0=1$ in the proof of Theorem~\ref{thm:local-diff-terms}).
+
+\subsection{Sets of Size 4} We handle one more case before 
+using induction to give a general recursive algorithm.
+The nontrivial forms of 4-sets are
+\begin{align*}
+P_4 &:= \{(a_0, b_0, 0), (a_1, b_1, 0),  (a_2, b_2, 0),  (a_3, b_3, 1)\},\\ 
+Q_4 &:= \{(a_0, b_0, 1), (a_1, b_1, 1), (a_2, b_2, 1), (a_3, b_3, 0)\},\\
+R_4 &:= \{(a_0, b_0, 0), (a_1, b_1, 0),  (a_2, b_2, 1),  (a_3, b_3, 1)\}.
+\end{align*}
+
+\medskip
+
+\noindent \underline{\textbf{Subroutine \ld-4.0}}\\[4pt]
+To find an \ld term operation for a set like $P_4$,
+% $\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 0)\}$,
+\begin{enumerate}
+\item use Subroutine \ld-3.0 to compute an \ld term operation $s$ for
+\begin{equation*}
+\{(a_1, b_1, 0),  (a_2, b_2, 0),  (a_3, b_3, 1)\};
+\end{equation*}
+\item use Subroutine \ld-2 to compute an \ld term operation $t$ for
+\begin{equation*}
+\{(a_0, s(a_0, b_0, b_0), 0), (a_3, b_3, 1)\}.
+\end{equation*}
+\end{enumerate}
+It is easy to check that
+$d(x,y,z) = t(x, s(x,y,y), s(x,y,z))$
+is then an \ld term operation for $P_4$ 
+(see Case $\chi_0=0$ in the proof of Theorem~\ref{thm:local-diff-terms}).
+
+\medskip
+
+\noindent \underline{\textbf{Subroutine \ld-4.1}}\\[4pt]
+To find an \ld term operation for a set like $Q_4$
+% $\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$,
+\begin{enumerate}
+\item 
+use Subroutine \ld-3.1 to compute an \ld term $s$ for the set
+\begin{equation*}
+\{(a_1, b_1, 1), (a_2, b_2, 1), (a_3, b_3, 0)\};
+\end{equation*}
+\item  use Subroutine \ld-2 to compute an \ld term $t$
+for the set
+\begin{equation*}
+\{(s(a_0, a_0, b_0), b_0, 1),  (a_3,a_3,0)\}.
+\end{equation*}
+\end{enumerate}
+Then 
+%%%
+$d(x,y,z) = t(s(x,y,z), s(y,y,z),z)$
+%%%
+is an \ld term  for $Q_4$ (see Case $\chi_0=1$ in the proof of Theorem~\ref{thm:local-diff-terms}).
+
+
+\medskip
+
+\noindent \underline{\textbf{Subroutine \ld-4.2}}\\[4pt]
+To find an \ld term operation for a set like $R_4$
+% $\{(a_0, b_0, 0), (a_1, b_1, 1),  (a_2, b_2, 1)\}$,
+\begin{enumerate}
+\item 
+use Subroutine \ld-3.1 to compute an \ld term $s$ for the set
+\begin{equation*}
+\{(a_1, b_1, 0), (a_2, b_2, 1), (a_3, b_3, 1)\};
+\end{equation*}
+\item use Subroutine \ld-2 to compute an \ld term operation $t$ for
+\begin{equation*}
+\{(a_0, s(a_0, b_0, b_0), 0), (a_3, b_3, 1)\}.
+\end{equation*}
+\end{enumerate}
+Then 
+$d(x,y,z) = t(x, s(x,y,y), s(x,y,z))$
+is an \ld term operation for $P_4$. 
 
 %\bibliographystyle{amsplain} %% or amsalpha
 %% \bibliographystyle{alpha-url}
