added new acronym for IDL routines

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -224,6 +224,8 @@
 
 \acrodef{ld}[LD]{local difference}
 \newcommand{\ld}{\acs{ld}\xspace}
+\acrodef{ild}[ILD]{inductive local difference}
+\newcommand{\ild}{\acs{ild}\xspace}
 
 \acrodef{sat}[SAT]{satisfiability}
 \newcommand{\sat}{\acs{sat}\xspace}
