--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1501,21 +1501,22 @@ Above we addressed the problem of deciding the existence of a difference term
 for a given (idempotent, locally finite) variety.  In this section we are 
 concerned with the practical problem of finding a difference term 
 \emph{operation} for a given (finite, idempotent) algebra.
-We describe polynomial-time algorithms for
+We describe algorithms for
 \begin{enumerate}
-\item \label{item:a} deciding whether a finite idempotent algebra 
+\item \label{item:a} deciding whether a given finite idempotent algebra 
 has a difference term operation, and 
 \item \label{item:b} finding a difference term operation 
-for a finite idempotent algebra.
+for a given finite idempotent algebra.
 \end{enumerate}
-Of course, Theorem XX already solves Problem~(\ref{item:a}).
-Nonetheless, the solution presented in this section serves
-two puposes.  First, it gives an alternative proof of 
-the existence of a polynomial-time algorithm for solving Problem~(\ref{item:a})
-(and, incidentally, in contrast to the earlier proof, 
-here we don't require any tame congruence theory).  
-Second, this alternative proof develops machinery
-that we exploit heavily when solving Problem~(\ref{item:b}).
+Although Theorem XX already gives a polynomial-time algorithm
+for solving~(\ref{item:a}), we include a second, entirely different 
+approach in this section for two reasons.  First, it gives an 
+alternative proof of the existence of a polynomial-time algorithm 
+for~(\ref{item:a}). (Incidentally, in contrast to the earlier proof, 
+here we don't require any tame congruence theory.)  
+Second, the alternative proof introduces machinery
+that we exploit heavily in the algorithm we present 
+for solving~(\ref{item:b}).
 
 
 
